--- a/index.html
+++ b/index.html
@@ -4,42 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GVT Tracker</title>
+
     <link rel="stylesheet" href="./lib/normalize.css" />
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet" />
   </head>
   <body>
-    <main class="main">
+    <header class="nav-bar">
       <h1>GVT Tracker</h1>
+    </header>
 
-      <section>
+    <main class="main">
+      <section class="generic-section">
         <h2>Rep count</h2>
 
         <div class="generic-container">
-          <div class="rep-tracker">
-            <div class="rep-tracker__item rep-tracker-count">0</div>
-            <div class="rep-tracker__item rep-tracker-separator">/</div>
-            <div class="rep-tracker__item rep-tracker-target">10</div>
+          <div class="info-container">
+            <div id="reps-count" class="info-item rep-tracker-count">00</div>
+            <div class="info-item info-item__separator">/</div>
+            <div id="reps-target" class="info-item rep-tracker-target">10</div>
           </div>
 
-          <button class="button">Add rep</button>
-          <button class="button--link">Reset reps</button>
+          <button id="reps-add" class="button add-rep">Add rep</button>
+          <button id="reps-reset" class="button--link">Reset reps</button>
         </div>
       </section>
 
-      <section>
-        <h2>Rest timer</h2>
+      <section class="generic-section">
+        <h2>Rest time</h2>
 
         <div class="generic-container">
-          <div class="rep-tracker">
-            <span class="rep-tracker__item" id="timer-minutes">00</span>
-            <span class="rep-tracker__item">:</span>
-            <span class="rep-tracker__item" id="timer-seconds">00</span>
+          <div class="info-container">
+            <span class="info-item" id="timer-minutes">00</span>
+            <span class="info-item info-item__separator">:</span>
+            <span class="info-item" id="timer-seconds">00</span>
           </div>
 
           <div class="button-group">
             <button id="timer-start" class="button">Start</button>
-            <button id="timer-reset" class="button">Reset</button>
+            <button id="timer-reset" class="button timer-reset">Reset</button>
           </div>
         </div>
       </section>
